nwa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be7a-nwa
spec:
  selector:
    matchLabels:
      app: be7a-nwa
      tier: be7a-nwa
  replicas: 1
  template:
    metadata:
      labels:
        app: be7a-nwa
        tier: be7a-nwa
    spec:
      containers:
      - name: be7a-nwa
        image: aarlint/be7a-nwa
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 8000
