nwa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be7a-nwa
  labels:
    app: be7a-nwa
    tier: be7a-nwa
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 1880
    protocol: TCP
    name: http
  selector:
    app: be7a-nwa
    tier: be7a-nwa
