nwa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be7a-nwa-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: be7a-nwa
            port:
              number: 80
